alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -97,19 +97,12 @@ figure {
   }
 
   .float-child {
-    width: 70%;
+    width: 80%;
     float: left;
     padding: 20px;
   }
   .float-child.first {
     width: 20%;
-  }
-
-  .md-stepper-horizontal .md-step .md-step-title {
-    padding-top: 2px;
-    font-size: 16px;
-    font-weight: 600;
-    padding-bottom: 16px;
   }
 }
 
@@ -202,6 +195,19 @@ figure {
   top: 36px;
   height: 1px;
   border-top: 1px solid #dddddd;
+}
+
+@media (max-width: 991px) {
+  .md-stepper-horizontal .md-step .md-step-bar-left,
+  .md-stepper-horizontal .md-step .md-step-bar-right {
+    border: 0px solid #dddddd;
+  }
+  .md-stepper-horizontal .md-step .md-step-title {
+    margin-top: 3px;
+    font-size: 16px;
+    font-weight: 600;
+    padding-bottom: 16px;
+  }
 }
 .md-stepper-horizontal .md-step .md-step-bar-right {
   right: 0;
